[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/2D/UI/UI_menu/UI_Arrow-Left_01.png" type="Texture" id=1]
[ext_resource path="res://Assets/2D/UI/UI_menu/UI_Arrow-Right_01.png" type="Texture" id=2]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Assets2.png" type="Texture" id=3]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Assets1.png" type="Texture" id=4]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Enemy.png" type="Texture" id=5]
[ext_resource path="res://scenes/GameCode/Menu/AchievementGalleryUI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Data/Theme/THEME_GarretBold.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Data/Theme/THEME_Garret.tres" type="Theme" id=8]
[ext_resource path="res://Assets/2D/UI/UI_menu/UI_GaleryLocked_01.png" type="Texture" id=9]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Mood.png" type="Texture" id=10]
[ext_resource path="res://Assets/2D/Gallery/extraContent_structure.png" type="Texture" id=11]
[ext_resource path="res://Assets/2D/Gallery/extraContent_rune.png" type="Texture" id=12]
[ext_resource path="res://Assets/2D/UI/UI_menu/UI_Arrow-LeftPressed_01.png" type="Texture" id=13]
[ext_resource path="res://Assets/2D/Gallery/extraContent_KeyArt.png" type="Texture" id=14]
[ext_resource path="res://Assets/2D/UI/UI_menu/UI_Arrow-RightPressed_01.png" type="Texture" id=15]
[ext_resource path="res://Assets/2D/Gallery/extraContent_ScreenShots.png" type="Texture" id=16]
[ext_resource path="res://Assets/2D/Gallery/extraContent_vegetation.png" type="Texture" id=17]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Kolka.png" type="Texture" id=18]
[ext_resource path="res://Assets/2D/Gallery/extraContent_Staff.png" type="Texture" id=19]

[sub_resource type="InputEventAction" id=7]
action = "gravity"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 11
pause = true
fps = 0.0
frame_0/texture = ExtResource( 10 )
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 11 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 12 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 17 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 5 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 19 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 18 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 16 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 4 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 3 )
frame_10/delay_sec = 0.0

[sub_resource type="InputEventAction" id=9]
action = "gravity_gun"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 11 )

[node name="AchievementGalleryUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
galleryArray = [ "Act-I-1", "Act-I-2", "Act-I-3", "Act-I-4", "Act-II-1", "Act-II-2", "Act-II-3", "Act-II-4", "Act-II-5", "Act-III-1", "Act-III-2" ]
galleryMusic = "res://Assets/Sounds/Music/SafetyTreeMusic.ogg"
mainMenuTheme = "res://Assets/Sounds/Music/MainMenuAmbient.ogg"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 248.0
margin_top = 72.0
margin_right = 1672.0
margin_bottom = 880.0
color = Color( 0, 0, 0, 1 )

[node name="BackButton" type="TextureButton" parent="."]
anchor_left = 0.008
anchor_top = 0.474
anchor_right = 0.075
anchor_bottom = 0.593
grow_horizontal = 2
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 15 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.133
anchor_top = 0.059
anchor_right = 0.867
anchor_bottom = 0.83
margin_left = 0.639999
margin_top = 16.28
margin_right = 0.359985
margin_bottom = -24.4
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="LockScreen" type="TextureRect" parent="TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="NextButton" type="TextureButton" parent="."]
anchor_left = 0.925
anchor_top = 0.474
anchor_right = 0.992
anchor_bottom = 0.593
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )
expand = true

[node name="ButtonBack" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 7 )
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.783
anchor_top = 0.919
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SectionName" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 101.0
margin_bottom = 83.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "I-1 "
align = 1

[node name="CoinsCollected" type="Label" parent="HBoxContainer"]
margin_left = 105.0
margin_top = 3.0
margin_right = 206.0
margin_bottom = 83.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "100"
align = 1

[node name="Slash" type="Label" parent="HBoxContainer"]
margin_left = 210.0
margin_top = 3.0
margin_right = 311.0
margin_bottom = 83.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "/"
align = 1

[node name="CoinsAvailable" type="Label" parent="HBoxContainer"]
margin_left = 315.0
margin_top = 3.0
margin_right = 416.0
margin_bottom = 83.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "100"
align = 1

[connection signal="visibility_changed" from="." to="." method="_on_AchievementGalleryUI_visibility_changed"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="NextButton" to="." method="_on_NextButton_button_up"]
[connection signal="button_up" from="ButtonBack" to="." method="_on_ButtonBack_button_up"]
